# serde_unit_struct

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
serde_unit_struct/: Cargo.toml
serde_unit_struct/src/: lib.rs
serde_unit_struct_derive/: Cargo.toml
serde_unit_struct_derive/src/: lib.rs
