[package]
name = "serde_unit_struct"
version = "0.1.1"
authors = ["Chris Riches"]
edition = "2021"
description = "(De)serialize a unit struct as its name"
readme = "../README.md"
repository = "https://github.com/cjriches/serde_unit_struct"
license = "MIT OR Apache-2.0"
categories = ["encoding", "no-std::no-alloc"]

[dependencies.serde_unit_struct_derive]
path = "../serde_unit_struct_derive"
version = "0.1.1"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
