[package]
name = "serde_unit_struct"
version = "0.1.3"
authors = ["Chris Riches"]
edition = "2021"
description = "(De)serialize a unit struct as its name"
readme = "../README.md"
repository = "https://github.com/cjriches/serde_unit_struct"
license = "MIT OR Apache-2.0"
categories = ["encoding", "no-std::no-alloc"]

[dependencies.serde_unit_struct_derive]
path = "../serde_unit_struct_derive"
version = "0.1.3"

[dev-dependencies]
bson = "2"
csv = "1"
postcard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-pickle = "1"
serde_yaml = "0.9"
toml = "0.8"
