[package]
name = "serde_unit_struct_derive"
version = "0.1.2"
authors = ["Chris Riches"]
edition = "2021"
description = "Proc-macro engine for serde_unit_struct"
readme = "../README.md"
repository = "https://github.com/cjriches/serde_unit_struct"
license = "MIT OR Apache-2.0"
categories = ["encoding", "no-std::no-alloc"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
